[gd_scene load_steps=3 format=3 uid="uid://cr2h7donlkwv1"]

[ext_resource type="Script" path="res://scenes/abstract_weapon.gd" id="1_0aq4s"]
[ext_resource type="AudioStream" uid="uid://b1dqcg2f1crbo" path="res://audios/weapons/reload.wav" id="2_ipuoi"]

[node name="AbstractWeapon" type="Node2D"]
script = ExtResource("1_0aq4s")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(11, 0)

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ipuoi")
